--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fm.a2d.sf"
+    package="com.paranoid.fm"
     android:versionCode="78"
-    android:versionName="2015_01_12_beta" >
+    android:versionName="kitkat" >
 
 <!-- 
 !! See to add android.intent.action.BUG_REPORT
@@ -60,7 +60,7 @@ App drawer name for all unless locally over-ridden:
     <application
         android:allowBackup="true"
         android:icon="@drawable/img_icon"
-        android:label="SpiritF"
+        android:label="Paranoid FM Radio"
         android:theme="@android:style/Theme.Holo" >
 
 
@@ -82,7 +82,7 @@ android:windowSoftInputMode="adjustResize"
 android:windowSoftInputMode="stateHidden"
  -->
         <activity
-            android:name="fm.a2d.sf.gui_act"
+            android:name="com.paranoid.fm.gui_act"
     android:launchMode="singleInstance"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -113,14 +113,14 @@ android:theme="@android:style/Theme.Translucent.NoTitleBar"
 ! Need separate process or get fg/bg problems !!!
  -->
     <service
-      android:name="fm.a2d.sf.svc_svc"
+      android:name="com.paranoid.fm.svc_svc"
 android:process=":s"
-      android:label="SpiritF FM Service"
+      android:label="Paranoid Radio FM Service"
       android:enabled="true"
       android:exported="true"
       >
       <intent-filter>
-                <action android:name="fm.a2d.sf.action.set" />
+                <action android:name="com.paranoid.fm.action.set" />
       </intent-filter>
     </service>
 <!-- 
@@ -134,7 +134,7 @@ Intent API
                 <action android:name="fm.a2d.sf.result.get" />
             </intent-filter>
 -->
-        <receiver android:name="fm.a2d.sf.svc_bcr">
+        <receiver android:name="com.paranoid.fm.svc_bcr">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
